# toonboom-harmony-mcp

./: .env.example  .gitignore  1.md  999.md  ACTOR.MD  AI_ANIMATION_FACTORY_ARCHITECTURE.md  AI_ANIMATION_FACTORY_WALKTHROUGH.md  AI_ANIMATION_STUDIO_MASTER_IMPLEMENTATION_PROMPT.md  BRUTAL_ENTERPRISE_AUDIT.md  CHECKPOINT.md  HARDENING_VERIFICATION_REPORT.md  HARMONY_NATIVE_VERIFICATION.md  HARMONY_VIDEO_RECONSTRUCTION_TASK.md  MARKETING_REPORT.md  MCP_ML_PERCEPTION_STACK_MASTER_PROMPT.md  ML_STACK_WALKTHROUGH.md  README.md  jest.config.cjs  marketing-report.md  marketing.md  oneprompt.md  package-lock.json  package.json  playlist_knowledge_base.md  playlist_knowledge_base2.md  playlist_knowledge_base3.md  prompt.md  techspec.md  toonboom_reddit_problem_insights.md  toonboom_reddit_problem_insights2.md  toonboom_reddit_problem_insights3.md  toonboom_reddit_problem_insights4.md  toonboom_reddit_problem_insights5.md  toonboom_reddit_problem_insights6.md  toonboom_rigging_video_insights.md  tsconfig.json
services/ml-core/: pyproject.toml
services/ml-core/ml_core/: api.py  config.py  dataset_registry.py  hardware.py  jobs.py  manifests.py  model_registry.py
services/ml-core/requirements/: apple-silicon.txt  base.txt  cpu.txt  cuda.txt
services/ml-core/tests/: test_perception_stack.py
services/reconstruction-core/: pyproject.toml
services/reconstruction-core/reconstruction_core/: __init__.py  api.py  cli.py  dedup.py  factorization.py  hypotheses.py  metrics.py  models.py  palette.py  perception.py  pipeline.py  preprocess.py  preview.py  problems.py  reports.py  (+9 more)
(+286 files in other folders)
