[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "harmony-ml-core"
version = "0.1.0"
description = "ML Perception Stack core service for toonboom-harmony-mcp"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.0.0",
  "uvicorn>=0.25.0",
  "numpy>=1.22.0",
  "opencv-python-headless>=4.8.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.25.0",
  "jinja2>=3.1.0"
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_core*"]
